--- a/oloo_works_1-r.html
+++ b/oloo_works_1-r.html
@@ -18,7 +18,7 @@
     <meta property="og:description" content="網站&APP產品規劃與視覺設計">
 
     <link rel="shoutcut icon" href="images/favicon-jw.ico" />
-    <title>Joe Wang UI.UX作品集</title>
+    <title>UXR市場研究-制定議題</title>
     <link href="css/index.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="js/jquery.min.js"></script>
 
@@ -74,12 +74,7 @@
 <body class="body_page oloo_works_1_pup">
     <div class="pup_window_content" style="overflow:inherit;">
         <div style="display:flex;">
-            <div class="h4 font_bold">UXR市場研究&nbsp;制定議題</div>
-            <a href="uiux_index.html#p13_title-1">
-                <div class="page_back_btn">
-                    回作品集<img src="images/arrow-left-link.png" alt="">
-                </div>
-            </a>
+            <div class="h4 font_bold" style="margin-bottom:10px;">UXR市場研究&nbsp;制定議題</div>
         </div>
 
         <div class="pup_window_content_tab_container">
