--- a/sino_works_1-r.html
+++ b/sino_works_1-r.html
@@ -18,7 +18,7 @@
     <meta property="og:description" content="網站&APP產品規劃與視覺設計">
 
     <link rel="shoutcut icon" href="images/favicon-jw.ico" />
-    <title>Joe Wang UI.UX作品集</title>
+    <title>投保網站-前期規劃</title>
     <link href="css/index.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="js/jquery.min.js"></script>
 
@@ -74,18 +74,12 @@
 <body class="body_page sino_works_1_pup">
     <div class="pup_window_content" style="overflow:inherit;">
         <div style="display:flex;">
-            <div class="h4 font_bold">投保網站&nbsp;內容規劃</div>
-            <a href="uiux_index.html#p7_title" id="sino_w1_back">
-                <div class="page_back_btn">
-                    回作品集<img src="images/arrow-left-link.png" alt="">
-                </div>
-            </a>
+            <div class="h4 font_bold" style="margin-bottom:10px;">投保網站&nbsp;前期規劃</div>
         </div>
 
         <div class="pup_window_content_tab_container">
             <div class="pup_window_content_tab pup_tab_btn sino_pup_tab_1 h5 font_bold"><a href="#sino_tab_1" class="set_middle" id="sino_w1_tab1"><span>資訊架構</span></a></div>
             <div class="pup_window_content_tab pup_tab_btn sino_pup_tab_2 h5 font_bold"><a href="#sino_tab_2" class="set_middle" id="sino_w1_tab2"><span>頁面布局</span></a></div>
-            <div class="pup_window_content_tab pup_tab_btn sino_pup_tab_3 h5 font_bold"><a href="#sino_tab_3" class="set_middle" id="sino_w1_tab3"><span>線框稿</span></a></div>
         </div>
         <div class="pup_window_tab_content_container">
 
@@ -776,97 +770,6 @@
                 <div class="pup_window_content_end_tip_container">
                     <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">頁面布局&nbsp;規劃內容</span></span>
                 </div>
-            </div>
-
-            <div id="sino_tab_3" class="pup_window_tab_content">
-
-                <div class="pup_window_content_part project_content_part" style="margin-bottom:30px;">
-                    <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">前言</div>
-                        <div class="pup_normal_text">
-                            彙整網站各項資料文件，以資訊架構與頁面布局為基礎，<br /><span class="emphasize_text">繪製線框稿(介面化)說明功能機制。</span><br />
-                            <span style="font-size:16px;">*版面空間有限，電腦裝置瀏覽為佳。</span>
-                        </div>
-                        <div class="pup_normal_text">
-                            <a href="https://www.figma.com/design/iBEclKLRC0BWhdVneCdE7h/%E7%B6%B2%E7%AB%99%E5%85%A7%E5%AE%B9%E8%A6%8F%E5%8A%83?node-id=0-1&t=gTP4YLRqzrOp1k9r-1" target="_blank" class="pup_window_btn" id="sino_w1_tab3tofigma-1">前往<img src="images/figma_logo.svg" style="width:24px;">figma瀏覽完整線框稿</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="pup_window_content_part project_content_part">
-                    <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">審閱指引</div>
-
-                        <div class="subject_group_content_item" style="margin-top:10px;">
-                            <div class="item_title font_bold">
-                                <div class="dot"><i class="fa fa-circle"></i></div>提示色說明：
-                            </div>
-                            <div class="color_square_container">
-                                <div class="color_square_item">
-                                    <div class="square_item blue_square"></div><span>連結&amp;CTA</span>
-                                </div>
-                                <div class="color_square_item">
-                                    <div class="square_item brown_square"></div><span>動態資料(由使用者操作輸入而變動)</span>
-                                </div>
-                                <div class="color_square_item">
-                                    <div class="square_item dark_blue_square"></div><span>當前選擇、所處步驟</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="subject_group_content_item" style="margin-top:10px;">
-                            <div class="item_title font_bold">
-                                <div class="dot"><i class="fa fa-circle"></i></div>本站串接API：
-                            </div>
-                            <div class="item_text large_item_text">
-                                永豐保險業務API、永豐網銀會員API、各家保險公司商品API(泰安保險商品API)、台灣縣市地區API、台灣銀行名稱代碼API、世界國家API、電子信箱檢核API。
-                            </div>
-                        </div>
-                        <div class="subject_group_content_item" style="margin-top:10px;">
-                            <div class="item_title font_bold">
-                                <div class="dot"><i class="fa fa-circle"></i></div>註記：
-                            </div>
-                            <div class="item_text large_item_text">
-                                1.若網頁資料無說明來源，則為網站建置時人工寫入HTML。
-                            </div>
-                            <div class="item_text large_item_text">
-                                2.網頁狀態：<br>
-                                <div class="item_text_note">初始狀態，網頁(使用者)未輸入資料。</div>
-                                <div class="item_text_note">理想狀態，網頁(使用者)完整功能操作、資料輸入。</div>
-                                <div class="item_text_note">錯誤狀態，網頁操作、資料錯誤。</div>
-                                <div class="item_text_note">空白狀態，網頁無功能、資料呈現。</div>
-                                <div class="item_text_note">局部狀態，理想狀態之外的功能操作、資料輸入。</div>
-                            </div>
-                            <div class="item_text large_item_text">
-                                3.頁面狀態樣貌，以後續Mockups設計呈現為準。
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="pup_window_content_part project_content_part" style="margin-bottom:0px;">
-                    <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">線框稿內容</div>
-                        <div class="pup_text large_text" style="font-size:16px;">以網站首頁為例。</div>
-                        <div class="pup_content_text">
-
-                            <div class="text_row">
-                                <div class="text_item">
-                                    <div>
-                                        <img src="images/sino_pic_9_0.png" class="sino_pic_9">
-                                        <img src="images/sino_pic_9_1.png" class="sino_pic_9">
-                                        <img src="images/sino_pic_9_3.png" class="sino_pic_9">
-                                        <img src="images/sino_pic_9_4.png" class="sino_pic_9">
-                                        <img src="images/sino_pic_9_5.png" class="sino_pic_9">
-                                    </div>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="pup_window_content_end_tip_container">
-                    <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">功能機制&nbsp;規劃內容</span></span>
-                </div>
-                <div class="pup_window_content_next_tip">前往figma<a href="https://www.figma.com/design/iBEclKLRC0BWhdVneCdE7h/%E7%B6%B2%E7%AB%99%E5%85%A7%E5%AE%B9%E8%A6%8F%E5%8A%83?node-id=0-1&t=gTP4YLRqzrOp1k9r-1" target="_blank" id="sino_w1_tab3tofigma-2">瀏覽完整線框稿</a></div>
             </div>
 
         </div>
