--- a/sino_works_4-r.html
+++ b/sino_works_4-r.html
@@ -18,7 +18,7 @@
     <meta property="og:description" content="網站&APP產品規劃與視覺設計">
 
     <link rel="shoutcut icon" href="images/favicon-jw.ico" />
-    <title>Joe Wang UI.UX作品集</title>
+    <title>投保網站-易用性設計</title>
     <link href="css/index.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="js/jquery.min.js"></script>
 
@@ -74,12 +74,7 @@
 <body class="body_page sino_works_4_pup">
     <div class="pup_window_content" style="overflow:inherit;">
         <div style="display:flex;">
-            <div class="h4 font_bold">投保網站&nbsp;易用性設計</div>
-            <a href="uiux_index.html#p7_title" id="sino_w4_back">
-                <div class="page_back_btn">
-                    回作品集<img src="images/arrow-left-link.png" alt="">
-                </div>
-            </a>
+            <div class="h4 font_bold" style="margin-bottom:10px;">投保網站&nbsp;易用性設計</div>
         </div>
 
         <div class="pup_window_content_tab_container">
@@ -93,7 +88,7 @@
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">前言</div>
                         <div class="pup_text large_text">
-                            內容為<span class="emphasize_text">「減輕沉默成本、人性化設計、使用便利性、考量操作細節」</span>
+                            內容為<span class="emphasize_text">「減輕沉默成本、使用便利性、考量操作細節」</span>
                         </div>
                     </div>
                 </div>
@@ -138,29 +133,9 @@
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:40px;">
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">二、使用便利性</div>
-                        <div class="pup_normal_text"><span class="emphasize_text font_bold">例：設計不同「申請投保」流程入口，</span>增加網站目標轉換率。</div>
-                        <div class="pup_content_pic_container" style="margin-top:20px;">
-                            <div class="pup_content_pic_item" style="text-align:left;margin-bottom:20px;">
-                                <div class="pup_normal_text" style="margin-bottom:5px;"><span class="emphasize_text">1.想直接申請投保</span>：<br />首頁橫幅廣告搭配「立即投保」按鈕。</div>
-                                <div class="pup_normal_text" style="margin-top:10px;margin-bottom:5px;"><span class="emphasize_text">2.想比較理賠項目和保費</span>：<br />提供保費試算，搭配「立即投保」按鈕。</div>
-                                <div>
-                                    <picture>
-                                        <source media="(max-width:540px)" srcset="images/sino_pic_13-1-540.png" />
-                                        <source media="(max-width:960px)" srcset="images/sino_pic_13-1-768.png" />
-                                        <img src="images/sino_pic_13-1.png" class="sino_pic_11">
-                                    </picture>
-                                    <div class="pup_normal_text" style="margin-top:10px;margin-bottom:5px;"><span class="emphasize_text">3.想了解完整保險資訊</span>：<br />提供保險商品頁，搭配「立即投保」按鈕。</div>
-                                    <picture>
-                                        <source media="(max-width:540px)" srcset="images/sino_pic_13-2-540.png" />
-                                        <source media="(max-width:960px)" srcset="images/sino_pic_13-2-768.png" />
-                                        <img src="images/sino_pic_13-2.png" class="sino_pic_11">
-                                    </picture>
-                                </div>
-                            </div>
-                        </div>
                         <div class="pup_content_pic_container" style="margin-top:20px;">
                             <div class="pup_content_pic_item" style="text-align:left;margin-bottom:30px;">
-                                <div class="pup_normal_text font_bold" style="margin-bottom:5px;"><span class="emphasize_text font_bold">例：考量資料暫存，方便使用者取用</span></div>
+                                <div class="pup_normal_text font_bold" style="margin-bottom:5px;"><span class="emphasize_text">考量資料暫存，方便使用者取用</span></div>
                                 <div class="pup_content_pic_item_content">
                                     <picture>
                                         <source media="(max-width:430px)" srcset="images/sino_pic_13-11-1-430.png" />
@@ -181,7 +156,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:40px;">
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">三、考量操作細節</div>
@@ -292,52 +266,13 @@
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">前言</div>
                         <div class="pup_text large_text">
-                            內容為<span class="emphasize_text">「優化介面操作、介面擴充性、版面閱讀性、資訊易讀性、規劃使用層次」</span>
+                            內容為<span class="emphasize_text">「介面擴充性、版面閱讀性、資訊易讀性、介面層次規劃」</span>
                         </div>
-                    </div>
-                </div>
-                <div class="pup_window_content_part project_content_part" style="margin-bottom:40px;">
-                    <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">一、優化介面操作</div>
-                        <div class="pup_normal_text">根據使用情境、資訊配置，導入易用性原則。</div>
-                        <div class="pup_content_pic_container" style="margin-top:20px;">
-                            <div class="pup_content_pic_item" style="text-align:left;">
-                                <div class="pup_normal_text">例：投保紀錄列表</div>
-                                <div class="pup_normal_text">幫助使用者<sapn class="emphasize_text">快速掌握投保險種、狀態、重要資訊</sapn>。</div>
-                                <div class="pup_content_pic_item_content">
-                                    <div class="emphasize_text large_text font_bold" style="margin-top:30px;margin-bottom:10px;">介面設計要點</div>
-                                    <picture>
-                                        <img src="images/sino_pic_13-9-15-2.png" class="sino_pic_10">
-                                    </picture>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="pup_content_pic_container" style="margin-top:40px;">
-                            <div class="pup_content_pic_item" style="text-align:left;">
-                                <div class="pup_normal_text">例：旅遊國家選單</div>
-                                <div class="pup_normal_text" style="margin-bottom:10px;">幫助使用者<sapn class="emphasize_text">從197個國家，快速選擇符合的國家</sapn>。</div>
-                                <div class="pup_content_pic_item_content">
-                                    <picture>
-                                        <source media="(max-width:540px)" srcset="images/sino_pic_13-9-14-540.png" />
-                                        <source media="(max-width:960px)" srcset="images/sino_pic_13-9-14-768.png" />
-                                        <img src="images/sino_pic_13-9-14.png" class="sino_pic_11">
-                                    </picture>
-                                    <div class="pup_normal_text_small">點擊旅遊國家欄位，顯示選單視窗</div>
-                                    <div class="emphasize_text large_text font_bold" style="margin-top:30px;margin-bottom:10px;">介面設計要點</div>
-                                    <picture>
-                                        <source media="(max-width:540px)" srcset="images/sino_pic_13-9-15-430.png" />
-                                        <source media="(max-width:960px)" srcset="images/sino_pic_13-9-15-540.png" />
-                                        <img src="images/sino_pic_13-9-15.png" class="sino_pic_10">
-                                    </picture>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="pup_normal_text emphasize_text font_bold" style="margin-top:10px;">☑️提升介面操作效率。</div>
                     </div>
                 </div>
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:60px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">二、介面擴充性</div>
+                        <div class="part_title h5 font_bold emphasize_text">一、介面擴充性</div>
                         <div class="pup_content_pic_container" style="margin-top:20px;">
                             <div class="pup_content_pic_item" style="text-align:left;margin-bottom:30px;">
                                 <div class="pup_normal_text emphasize_text font_bold" style="margin-bottom:5px;">1.原子化元件：組合各式操作介面並保持用途一致</div>
@@ -372,7 +307,7 @@
 
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:60px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">三、版面閱讀性</div>
+                        <div class="part_title h5 font_bold emphasize_text">二、版面閱讀性</div>
                         <div class="pup_normal_text">根據資訊內容，優化排版並模組化。</div>
                         <div class="pup_content_pic_container" style="margin-top:20px;">
                             <div class="pup_content_pic_item" style="text-align:left;">
@@ -437,7 +372,7 @@
                 </div>
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:60px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">四、資訊易讀性</div>
+                        <div class="part_title h5 font_bold emphasize_text">三、資訊易讀性</div>
                         <div class="pup_normal_text">以圖示輔助文字描述。</div>
                         <div class="pup_content_pic_container" style="margin-top:20px;">
                             <div class="pup_content_pic_item" style="text-align:left;">
@@ -458,7 +393,7 @@
 
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:30px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">五、規劃使用層次</div>
+                        <div class="part_title h5 font_bold emphasize_text">四、介面層次規劃</div>
                         <div class="pup_normal_text">內容規劃根據視覺引導力，安排順序配置。</div>
                         <div class="pup_content_pic_container" style="margin-top:20px;">
                             <div class="pup_content_pic_item" style="text-align:left;margin-bottom:30px;">
