--- a/sino_works_8-r.html
+++ b/sino_works_8-r.html
@@ -18,7 +18,7 @@
     <meta property="og:description" content="網站&APP產品規劃與視覺設計">
 
     <link rel="shoutcut icon" href="images/favicon-jw.ico" />
-    <title>Joe Wang UI.UX作品集</title>
+    <title>投保網站-競品分析/維運提案</title>
     <link href="css/index.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="js/jquery.min.js"></script>
 
@@ -74,17 +74,12 @@
 <body class="body_page sino_works_6_pup">
     <div class="pup_window_content" style="overflow:inherit;">
         <div style="display:flex;">
-            <div class="h4 font_bold">投保網站&nbsp;競品分析/維運提案</div>
-            <a href="uiux_index.html#p7_title" id="sino_w6_back">
-                <div class="page_back_btn">
-                    回作品集<img src="images/arrow-left-link.png" alt="">
-                </div>
-            </a>
+            <div class="h4 font_bold" style="margin-bottom:10px;">投保網站&nbsp;競品分析/維運提案</div>
         </div>
 
         <div class="pup_window_content_tab_container">
             <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#sino_tab_12" class="set_middle"><span>分析策略</span></a></div>
-            <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#sino_tab_13" class="set_middle"><span>執行說明</span></a></div>
+            <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#sino_tab_13" class="set_middle"><span>提案內容</span></a></div>
         </div>
         <div class="pup_window_tab_content_container">
 
@@ -335,7 +330,7 @@
                     </div>
                 </div>
                 <div class="pup_window_content_end_tip_container">
-                    <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">執行提案</span></span>
+                    <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">提案內容</span></span>
                 </div>
             </div>
         </div>
@@ -344,7 +339,7 @@
 </body>
 <script type="text/javascript">
     $(function() {
-        var showTab = 0;
+        var showTab = 1;
         var defaultLi = $('.sino_works_6_pup .pup_tab_btn').eq(showTab).addClass('active');
         $(defaultLi.find('a').attr('href')).siblings().hide();
         $('.sino_works_6_pup .pup_tab_btn').click(function() {
