--- a/uiux_index.html
+++ b/uiux_index.html
@@ -1214,7 +1214,7 @@
                                 <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>網站視覺提案
                             </div>
                             <div class="work_info_subtext">
-                                我方公司與<span class="font_bold">兩家設計公司競爭提案</span>，個人分析客戶營業屬性，發想製作兩款介面風格，設計符合客戶的期待並<span class="font_bold">取得標案</span>。
+                                <span class="font_bold">與兩家設計公司競爭提案</span>，分析客戶營業屬性，發想製作兩款介面風格，設計符合客戶的期待並<span class="font_bold">取得標案</span>。
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                 <img src="images/pup_link_dot.png" class="pup_link_dot">
@@ -2243,7 +2243,7 @@
             <div class="pup_window_content_title h4 font_bold">泰安產物官網&nbsp;維運部分展示</div>
 
             <div class="pup_window_content_tab_container">
-                <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#taian_tab_1" class="set_middle"><span>視覺設計</span></a></div>
+                <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#taian_tab_1" class="set_middle"><span>頁面設計</span></a></div>
                 <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#taian_tab_2" class="set_middle"><span>介面流程</span></a></div>
             </div>
             <div class="pup_window_tab_content_container" style="height:calc(100% - 146px);">
@@ -2304,7 +2304,6 @@
                             <div class="pup_window_content_next_tip" style="text-align:center;margin-top:20px;"><a href="website/taian_b2b_fire/page_plan-s1.html" target="_blank">前端切版原型</a></div>
                             <div class="pup_text large_text" style="margin-top:20px;text-align:center;font-size:16px;">涉及商業相關業務邏輯資料，僅單頁展示於作品集。</div>
                         </div>
-
                     </div>
                     <div class="pup_window_content_end_tip_container">
                         <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">介面流程</span></span>
