--- a/yulon_works_5.html
+++ b/yulon_works_5.html
@@ -84,7 +84,7 @@
 
         <div class="pup_window_content_tab_container">
             <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#yulon_tab_9" class="set_middle"><span>功能規劃</span></a></div>
-            <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#yulon_tab_10" class="set_middle"><span>介面易用性</span></a></div>
+            <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#yulon_tab_10" class="set_middle"><span>操作介面</span></a></div>
             <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#yulon_tab_11" class="set_middle"><span>資訊閱讀</span></a></div>
         </div>
         <div class="pup_window_tab_content_container">
@@ -257,7 +257,7 @@
                             </div>
                         </div>
                         <div class="pup_window_content_end_tip_container">
-                            <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">設計亮點&nbsp;功能</span></span>
+                            <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">設計亮點&nbsp;功能規劃</span></span>
                         </div>
                     </div>
                 </div>
@@ -396,7 +396,7 @@
                             </div>
                         </div>
                         <div class="pup_window_content_end_tip_container">
-                            <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">設計亮點&nbsp;介面</span></span>
+                            <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">設計亮點&nbsp;操作介面</span></span>
                         </div>
                     </div>
                 </div>
@@ -445,7 +445,7 @@
                         </div>
                         <div class="pup_normal_text font_bold" style="margin-top:30px;"><span class="emphasize_text">☑️將文字、數字以圖像方式呈現</span>，增加版面閱讀效率。</div>
                         <div class="pup_window_content_end_tip_container">
-                            <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">設計亮點&nbsp;其他</span></span>
+                            <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">設計亮點&nbsp;資訊閱讀</span></span>
                         </div>
                     </div>
                 </div>
