--- a/yulon_works_2-r.html
+++ b/yulon_works_2-r.html
@@ -18,7 +18,7 @@
     <meta property="og:description" content="網站&APP產品規劃與視覺設計">
 
     <link rel="shoutcut icon" href="images/favicon-jw.ico" />
-    <title>Joe Wang UI.UX作品集</title>
+    <title>員工APP和後台-線框稿</title>
     <link href="css/index.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="js/jquery.min.js"></script>
 
@@ -74,12 +74,7 @@
 <body class="body_page yulon_works_2_pup">
     <div class="pup_window_content" style="overflow:inherit;">
         <div style="display:flex;">
-            <div class="h4 font_bold">員工APP和後台&nbsp;線框稿</div>
-            <a href="uiux_index.html#p9_title">
-                <div class="page_back_btn">
-                    回作品集<img src="images/arrow-left-link.png" alt="">
-                </div>
-            </a>
+            <div class="h4 font_bold" style="margin-bottom:10px;">員工APP和後台&nbsp;線框稿</div>
         </div>
 
         <div class="pup_window_content_tab_container">
@@ -95,7 +90,6 @@
                         <div class="part_title h5 font_bold emphasize_text">前言</div>
                         <div class="pup_normal_text">
                             彙整以資訊架構與頁面布局為基礎，<span class="emphasize_text">繪製線框稿說明功能機制。</span><br />
-                            <span style="font-size:16px;">*版面空間有限，電腦裝置瀏覽為佳。</span>
                         </div>
                     </div>
                 </div>
