--- a/yulon_works_3-r.html
+++ b/yulon_works_3-r.html
@@ -18,7 +18,7 @@
     <meta property="og:description" content="網站&APP產品規劃與視覺設計">
 
     <link rel="shoutcut icon" href="images/favicon-jw.ico" />
-    <title>Joe Wang UI.UX作品集</title>
+    <title>員工資訊APP-前台設計稿</title>
     <link href="css/index.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="js/jquery.min.js"></script>
 
@@ -74,12 +74,7 @@
 <body class="body_page yulon_works_3_pup">
     <div class="pup_window_content" style="overflow:inherit;">
         <div style="display:flex;">
-            <div class="h4 font_bold">員工資訊APP&nbsp;前台設計稿</div>
-            <a href="uiux_index.html#p9_title">
-                <div class="page_back_btn">
-                    回作品集<img src="images/arrow-left-link.png" alt="">
-                </div>
-            </a>
+            <div class="h4 font_bold" style="margin-bottom:10px;">員工資訊APP&nbsp;前台設計稿</div>
         </div>
 
         <div class="pup_window_content_tab_container">
