--- a/uiux_index.html
+++ b/uiux_index.html
@@ -240,6 +240,7 @@
 
     </script>
     <!-- 回饋瀏覽感受end -->
+    
     <div class="page_choice_btn_note" style="display:none;">
         <div>點擊&nbsp;<span class="page_choice_btn_icon">≡</span>&nbsp;可以<br>開啟頁面選單</div>
         <div class="page_choice_btn_note_btn" role="button"><span>了解，</span>關閉提示</div>
@@ -511,22 +512,24 @@
                         <div class="info_personal_call h2 font_bold">資深UI.UX設計師<span>&nbsp;‧&nbsp;</span><br>產品規劃到維運迭代</div>
                         <div class="info_personal_detail display_none_768">
                             <ul>
-                                <li>需求轉化數位產品，職涯十年經驗。</li>
-                                <li>近三年專案，客戶皆集團級企業。</li>
-                                <li>觀察資料脈絡，靈活提出產品策略。</li>
-                                <li>熟悉易用、易讀原則，實踐產品介面。</li>
-                                <li>懂前後端運作概念，與工程師溝通順暢。</li>
+                                <li>有步驟方法，將需求轉化數位產品</li>
+                                <li>近三年專案，客戶皆集團級企業</li>
+                                <li>觀察資料脈絡，提出產品策略</li>
+                                <li>分析產業面向，設計視覺風格</li>
+                                <li>熟易用、易讀原則，實踐產品介面</li>
+                                <li>懂前後端運作，與工程師溝通順暢</li>
                             </ul>
                         </div>
                     </div>
                 </div>
                 <div class="info_personal_detail display_block_768 appear-animation" data-appear-animation="fadeInUp">
                     <ul>
-                        <li>需求轉化數位產品，職涯十年經驗。</li>
-                        <li>近三年專案，客戶皆集團級企業。</li>
-                        <li>觀察資料脈絡，靈活提出產品策略。</li>
-                        <li>熟悉易用、易讀原則，實踐產品介面。</li>
-                        <li>懂前後端運作概念，與工程師溝通順暢。</li>
+                        <li>有步驟方法，將需求轉化數位產品</li>
+                        <li>近三年專案，客戶皆集團級企業</li>
+                        <li>觀察資料脈絡，提出產品策略</li>
+                        <li>分析產業面向，設計視覺風格</li>
+                        <li>熟易用、易讀原則，實踐產品介面</li>
+                        <li>懂前後端運作，與工程師溝通順暢</li>
                     </ul>
                 </div>
                 <a href="info_attribute_tell.html">
