--- a/uiux_report.html
+++ b/uiux_report.html
@@ -28,7 +28,45 @@
     <script src="js/theme.js"></script>
     <script src="js/theme.init.js"></script>
     <!-- 區塊浮現動作套件 end -->
+    <script>
+        $(document).ready(function() {
+            $(".page_choice_btn_container").click(function() {
+                $(".page_menu_bg,.list_close_icon").fadeIn(1000);
+                $(".page_list_container").addClass("open_list");
+            });
+        });
 
+    </script>
+    <script>
+        $(document).ready(function() {
+            $(".list_close_icon,.page_list_item a,.page_menu_bg").click(function() {
+                $(".page_menu_bg,.list_close_icon").fadeOut(1000);
+                $(".page_list_container").removeClass("open_list");
+            });
+        });
+
+    </script>
+    <script>
+        $(document).ready(function() {
+            $(window).scroll(function(event) {
+                var scroll = $(window).scrollTop();
+                if (scroll > parseInt($(".p4_page").offset().top)) {
+                    $(".page_choice_btn_note").fadeIn(1500);
+                } else {
+                    $(".page_choice_btn_note").fadeOut(1500);
+                }
+            });
+        });
+
+    </script>
+    <script>
+        $(document).ready(function() {
+            $(".page_choice_btn_note_btn,.page_choice_btn_container").click(function() {
+                $(".page_choice_btn_note").addClass("display_none_all");
+            });
+        });
+
+    </script>
     <!-- Global site tag (gtag.js) - Google Analytics
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-5C5BZ9NLJ0"></script>
     <script>
@@ -62,9 +100,77 @@
 
     </script>
     <!-- End Google Tag Manager -->
+
 </head>
 
 <body class="body">
+
+    <div class="page_choice_btn_note" style="display:none;">
+        <div>點擊&nbsp;<span class="page_choice_btn_icon">≡</span>&nbsp;選單，可點選主題前往</div>
+        <div class="page_choice_btn_note_btn" role="button"><span>了解，</span>關閉提示</div>
+    </div>
+    <div class="pup_bg_transform" style="display:none;"></div>
+
+    <div id="menu_btn" class="page_choice_btn_container set_middle" role="button">
+
+    </div>
+    <!-- ... 選單 ... -->
+    <div id="menu_bg" class="page_menu_bg" style="display:none;">
+
+    </div>
+    <div class="page_list_container">
+        <div id="menu_close_btn" class="list_close_btn set_middle list_close_icon" role="button">
+
+        </div>
+        <div class="page_list">
+
+            <div class="page_list_item">
+                <span><a href="#p1">目錄</a></span>
+            </div>
+            <div class="page_list_item">
+                <div class="page_list_item_title" role="button">
+                    <div class="title">個人介紹</div>
+                    <span><img src="images/page_list_item_arrow.png" class="page_list_item_arrow" alt="下拉選單"></span>
+                </div>
+                <div class="page_list_item_page_choice">
+                    <div><a href="#p3">工作能力、職涯歷程</a></div>
+                </div>
+            </div>
+            <div class="page_list_item">
+                <div class="page_list_item_title" role="button">
+                    <div class="title">產品規劃思維</div>
+                    <span><img src="images/page_list_item_arrow.png" class="page_list_item_arrow" alt="下拉選單"></span>
+                </div>
+                <div class="page_list_item_page_choice">
+                    <div><a href="#p5">學習教材影音網站</a></div>
+                    <div><a href="#p6">金融商品投資APP</a></div>
+                </div>
+            </div>
+            <div class="page_list_item">
+                <div class="page_list_item_title" role="button">
+                    <div class="title">產品開發能力</div>
+                    <span><img src="images/page_list_item_arrow.png" class="page_list_item_arrow" alt="下拉選單"></span>
+                </div>
+                <div class="page_list_item_page_choice">
+                    <div><a href="#p8">永豐銀行&nbsp;保險代理網站(2C)</a></div>
+                    <div><a href="#p9">裕隆集團&nbsp;員工APP和管理後台(2B)</a></div>
+                </div>
+            </div>
+            <div class="page_list_item">
+                <div class="page_list_item_title" role="button">
+                    <div class="title">總結</div>
+                    <span><img src="images/page_list_item_arrow.png" class="page_list_item_arrow" alt="下拉選單"></span>
+                </div>
+                <div class="page_list_item_page_choice">
+                    <div><a href="#p11-1">聯絡資訊、專案成員評價</a></div>
+                    <div>
+                        <a href="#p11-2">更多專案執行內容</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- ... 選單end ... -->
 
     <div class="page_title">
         <div class="work_title_img_container set_middle appear-animation" data-appear-animation="fadeInUp">
@@ -76,23 +182,23 @@
     </div>
 
     <div class="page_container">
-        <div class="page_num_infor">
+        <div id="p1" class="page_num_infor">
             第1頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共12頁</span>
         </div>
         <div class="page_content">
             <div class="page_content_title">
-                <div class="page_content_title_name"><img src="images_report/page_content_title-1.png" alt="簡報大綱"></div>
+                <div class="page_content_title_name"><img src="images_report/page_content_title-1.png" alt="目錄"></div>
                 <div class="page_content_title_line"></div>
             </div>
             <div class="page_content_img">
                 <picture>
-                    <img src="images_report/page_content_img-1.png" alt="簡報大綱內容">
+                    <img src="images_report/page_content_img-1.png" alt="目錄">
                 </picture>
             </div>
         </div>
         <div class="page_bottom_bar">
             <span class="page_num"></span>
-            <span class="page_name">簡報大綱</span>
+            <span class="page_name">目錄</span>
         </div>
     </div>
 
@@ -109,7 +215,7 @@
     </div>
 
     <div class="page_container">
-        <div class="page_num_infor">
+        <div id="p3" class="page_num_infor">
             第3頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共12頁</span>
         </div>
         <div class="page_content">
@@ -136,7 +242,7 @@
                 </picture>
             </div>
         </div>
-        <div class="page_bottom_bar">
+        <div class="page_bottom_bar p4_page">
             <span class="page_num">01</span>
             <span class="page_name">工作能力與職涯歷程</span>
         </div>
@@ -155,7 +261,7 @@
     </div>
 
     <div class="page_container">
-        <div class="page_num_infor">
+        <div id="p5" class="page_num_infor">
             第5頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共12頁</span>
         </div>
         <div class="page_content">
@@ -188,7 +294,7 @@
     </div>
 
     <div class="page_container">
-        <div class="page_num_infor">
+        <div id="p6" class="page_num_infor">
             第6頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共12頁</span>
         </div>
         <div class="page_content">
@@ -265,7 +371,7 @@
     </div>
 
     <div class="page_container">
-        <div class="page_num_infor">
+        <div id="p8" class="page_num_infor">
             第8頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共12頁</span>
         </div>
         <div class="page_content">
@@ -463,7 +569,7 @@
         </div>
     </div>
     <div class="page_container">
-        <div class="page_num_infor">
+        <div id="p9" class="page_num_infor">
             第9頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共12頁</span>
         </div>
         <div class="page_content">
@@ -576,7 +682,7 @@
     </div>
 
     <div class="page_container">
-        <div class="page_num_infor">
+        <div id="p11-1" class="page_num_infor">
             第11頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共12頁</span>
         </div>
         <div class="page_content" style="padding-bottom:80px;">
@@ -588,10 +694,21 @@
                 <picture>
                     <img src="images_report/page_content_img-7.png" alt="聯絡資訊、專案成員評價">
                 </picture>
+                <div class="personal_infor_container">
+                    <div>
+                        <span class="title">手機號碼：</span><span>0927-821279</span>
+                    </div>
+                    <div>
+                        <span class="title">電子信箱：</span><span>a52363037@yahoo.com.tw</span>
+                    </div>
+                    <div>
+                        <span class="title">簡歷(Resume)：</span><a href="#" target="_blank">查看、下載簡歷.pdf</a>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="page_content" style="padding-bottom:80px;">
-            <div class="page_content_title">
+            <div id="p11-2" class="page_content_title">
                 <div class="page_content_title_name"><img src="images_report/page_content_title-8.png" alt="共享交通產品-UXR市場研究-定義議題→訪談調查→論述商業洞見，實作成果獲業主肯定"></div>
                 <div class="page_content_title_line"></div>
             </div>
