--- a/uiux_report.html
+++ b/uiux_report.html
@@ -702,7 +702,7 @@
                         <span class="title">電子信箱：</span><span>a52363037@yahoo.com.tw</span>
                     </div>
                     <div>
-                        <span class="title">簡歷(Resume)：</span><a href="#" target="_blank">查看、下載簡歷.pdf</a>
+                        <span class="title">簡歷(Resume)：</span><a href="https://drive.google.com/file/d/18P3n0mx2iMAcWuLE7bKs-Rd4GoFKuGVg/view?usp=sharing" target="_blank">查看、下載簡歷.pdf</a>
                     </div>
                 </div>
             </div>
