--- a/uiux_index.html
+++ b/uiux_index.html
@@ -321,7 +321,7 @@
         <div class="page_footer">
             <div class="page_footer_left_part appear-animation shake_item" style="align-items:center;">
                 <img src="images/page_operate_tip_img_2.svg" class="page_operate_tip_img" alt="向下箭頭圖示">
-                <span class="large_text">往下接續瀏覽內容</span>
+                <span class="large_text">往下方瀏覽內容</span>
             </div>
             <div class="page_footer_right_part h3">
                 <span class="font_bold">共16頁</span>
@@ -509,7 +509,7 @@
                     <div class="info_personal_pic"></div>
                     <div class="info_personal_describe appear-animation" data-appear-animation="fadeInUp">
                         <div class="info_personal_name h3 font_bold">王俊淵 Joe Wang<span class="large_text display_none_768">76/10/15</span></div>
-                        <div class="info_personal_call h2 font_bold">資深UI.UX設計師<span>&nbsp;‧&nbsp;</span><br>產品規劃到維運迭代</div>
+                        <div class="info_personal_call h2 font_bold">UI.UX設計師<span>&nbsp;‧&nbsp;</span><br>產品規劃到維運迭代</div>
                         <div class="info_personal_detail display_none_768">
                             <ul>
                                 <li>有步驟方法，將需求轉化數位產品</li>
