--- a/uiux_report.html
+++ b/uiux_report.html
@@ -442,7 +442,7 @@
                             <div class="fill_btn_large appear-animation" data-appear-animation="fadeInUp">
                                 <div>
                                     <div>點擊瀏覽&nbsp;更多網站設計稿</div>
-                                    <div class="btn_note">桌機、平板、手機</div>
+                                    <div class="btn_note">桌機、平板、手機尺寸</div>
                                 </div>
                             </div>
                         </a>
