--- a/uiux_report.html
+++ b/uiux_report.html
@@ -857,12 +857,11 @@
     </div>
     <div class="desktop_none_tip">
         <div>
-            <div class="title">您瀏覽器視窗，寬度小於1280px</div>
-            <div class="text" style="">
-                建議使用筆電螢幕以上尺寸<br />
-                較方便瀏覽完整內容<br /><br />
+            <div class="title">您目前瀏覽視窗，寬度小於1280px</div>
+            <div class="text">
+                瀏覽作品集內容<br/>建議為<br/>「筆電或桌機螢幕」1280px以上解析度<br/><br/>
                 <div class="note">
-                    若無法實行，則點擊按鈕
+                    若目前無法適配，可點擊下方按鈕
                     <a href="https://joehouse1015.github.io/joe_works/uiux_index.html" target="_blank">
                         <div class="line_btn">
                             前往RWD作品集版本
