--- a/uiux_report.html
+++ b/uiux_report.html
@@ -433,7 +433,7 @@
                     </div>
                 </div>
                 <div class="page_dashed_line"></div>
-                <div class="page_content_img sino_work-6" style="padding-bottom:90px;">
+                <div class="page_content_img sino_work-6" style="padding-left:0px;padding-bottom:90px;">
                     <picture>
                         <img src="images_report/page_content_img-5-6.png" alt="永豐銀行保險代理網站-設計稿-懂分析產業面向，規劃視覺風格">
                     </picture>
