--- a/uiux_index.html
+++ b/uiux_index.html
@@ -2065,7 +2065,7 @@
                                             <li>電子信箱：a52363037@yahoo.com.tw</li>
                                             <li>
                                                 <span class="font_bold">
-                                                    簡歷(Resume)：<a href="https://drive.google.com/file/d/1kV6_VRUVGPZ3nvy-fClVp0g3pcR-7rxv/view?usp=drive_link" target="_blank" id="resume_p1">查看、下載簡歷.pdf</a>
+                                                    簡歷(Resume)：<a href="https://drive.google.com/file/d/18P3n0mx2iMAcWuLE7bKs-Rd4GoFKuGVg/view" target="_blank" id="resume_p1">查看、下載簡歷.pdf</a>
                                                 </span>
                                             </li>
                                         </ul>
